add function demo

--- a/templates/mail.mjml
+++ b/templates/mail.mjml
@@ -26,7 +26,7 @@
             <mj-accordion-title>${vars.appname}</mj-accordion-title>
             <mj-accordion-text>
               <span style="line-height:20px">
-                Content is stacked into tabs and users can expand them at will. If responsive styles are not supported (mostly on desktop clients), tabs are then expanded and your content is readable at once.
+               ${new Date()} Content is stacked into tabs and users can expand them at will. If responsive styles are not supported (mostly on desktop clients), tabs are then expanded and your content is readable at once.
               </span>
             </mj-accordion-text>
           </mj-accordion-element>
